<resources>
    <string name="app_name">赌书泼茶</string>
    <string name="login">登录</string>

    <string name="refresh">刷新</string>
    <string name="login_failed">登录失败</string>
    <string name="collect_failed">收藏失败</string>
    <string name="login_successfully">登录成功</string>
    <string name="collect_successfully">收藏成功</string>
    <string name="decollect_successfully">成功删除收藏</string>
    <string name="decollect_unsuccessfully">删除收藏失败</string>
    <string name="relogin_needed">认证过期，请重新登录</string>
    <string name="waiting_for_auth">等待授权ing，亲操作操作其他先</string>
    <string name="press_again_to_logout">再按一次退出</string>
    <string name="book_search_hint">书名、作者、ISBN</string>
    <string name="scan_book">扫描图书</string>
    <string name="book_cover">图书封面</string>
    <string name="scan_failed">扫描不成功</string>
    <string name="toread">想读</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="about_info">主页: https://github.com/jinntrance/douban-android <br/>
        反馈：<a href="mailto:jinntrance@gmail.com">軒轅鍾書</a>
    </string>
    <string name="search">搜书</string>
    <string name="searching">搜索中…</string>
    <string name="search_no_result">此书未找到</string>
    <string name="search_result">搜索\"%1$s\"的结果</string>
    <string name="loading">加载中…</string>
    <string name="double_back_to_exit">再次按返回退出</string>
    <string name="button_ok">OK</string>
    <string name="swipe_up_to_load">上划获取更多(%1$s/%2$s)</string>
    <string name="notify_offline">网络已断开，请连接后重试</string>
    <string name="load_img_fail">加载%1$s图片失败</string>
    <string name="menu_share">Share</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">设置</string>
    <string name="menu_help">Help</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_google_books">Google Books</string>
    <string name="msg_google_product">Google Product Search</string>
    <string name="msg_google_shopper_missing">Google Shopper is not installed</string>
    <string name="msg_install_google_shopper">Google Shopper combines barcode scanning with online and local prices, reviews and more without opening the browser. Would you like to try it?</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="content_intro">内容简介</string>
    <string name="author_intro">作者简介</string>
    <string name="catalog_intro">目录</string>
    <string name="annotation">读书笔记</string>
    <string name="annotation_added">添加笔记成功</string>
    <string name="annotation_fails_to_add">添加笔记失败</string>
    <string name="add_note">写笔记</string>
    <string name="add_note_no_page">暂无第%1$s页笔记哦！赶紧添加吧～</string>
    <string name="add_collection">添加收藏</string>
    <string name="add_tags">添加标签</string>
    <string name="tags_hint">添加标签，空格区分</string>
    <string name="more_books_loaded">加载了%1$d本书</string>
    <string name="more_loaded_finished">到底了骚年</string>
    <string name="more_notes_loaded">加载了%1$d条笔记</string>
</resources>